# claude-seo

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: ci.yml  v2.yml
agents/: seo-backlinks.md  seo-content.md  seo-drift.md  seo-ecommerce.md  seo-geo.md  seo-google.md  seo-local.md  seo-performance.md  seo-schema.md  seo-sitemap.md  seo-sxo.md  seo-technical.md  seo-visual.md
branding/: diagrams-preview.html  final.html
branding/scripts/: generate_diagrams.py
docs/: INSTALLATION.md  MIGRATION-v1-to-v2.md  TROUBLESHOOTING.md
extensions/ahrefs/: install.ps1  install.sh
extensions/ahrefs/docs/: AHREFS-SETUP.md
extensions/ahrefs/skills/seo-ahrefs/: SKILL.md
extensions/banana/: install.sh
extensions/banana/docs/: BANANA-SETUP.md
extensions/banana/references/: seo-image-presets.md
extensions/banana/scripts/: setup_mcp.py  validate_setup.py
extensions/banana/skills/seo-image-gen/: SKILL.md
extensions/bing-webmaster/: install.sh
extensions/bing-webmaster/skills/seo-bing/: SKILL.md
extensions/dataforseo/: README.md  install.ps1  install.sh
extensions/dataforseo/skills/seo-dataforseo/: SKILL.md
extensions/firecrawl/: README.md  install.ps1  install.sh
extensions/unlighthouse/: install.ps1  install.sh
extensions/unlighthouse/docs/: UNLIGHTHOUSE-SETUP.md
hooks/: hooks.json  run-python-hook.js  validate-schema.py
scripts/: agent_ux_check.py  analyze_visual.py  backlinks_auth.py  bing_webmaster.py  capture_screenshot.py  commoncrawl_graph.py  content_humanize.py  crux_history.py  dataforseo_costs.py  dataforseo_merchant.py  dataforseo_normalize.py  domain_history.py  drift_baseline.py  drift_compare.py  drift_history.py  drift_report.py  fetch_page.py  ga4_report.py  gbp_deprecation_lint.py  google_auth.py  google_report.py  gsc_inspect.py  gsc_query.py  indexing_notify.py  indexnow_submit.py  iptc_ai_label.py  keyword_planner.py  lcp_subparts.py  moz_api.py  nlp_analyze.py  pagespeed_check.py  parasite_risk.py  parse_html.py  portability_check.py  preload_check.py  release_sign.py  render_page.py  schema_ecommerce_validate.py  schema_generate.py  seo_updates.py  (+7 more)
skills/seo/: SKILL.md
skills/seo-audit/: SKILL.md
skills/seo-backlinks/: SKILL.md
skills/seo-cluster/: SKILL.md
skills/seo-dataforseo/: SKILL.md
skills/seo-dataforseo/references/: cost-tiers.md
skills/seo-drift/: SKILL.md
skills/seo-ecommerce/: SKILL.md
skills/seo-ecommerce/references/: marketplace-endpoints.md
skills/seo-flow/: SKILL.md
skills/seo-geo/: SKILL.md
skills/seo-google/: SKILL.md
skills/seo-google/references/: auth-setup.md  keyword-planner-api.md
skills/seo-hreflang/references/: machine-translation-qa.md
skills/seo-image-gen/: SKILL.md
skills/seo-images/: SKILL.md
skills/seo-local/: SKILL.md
skills/seo-plan/assets/: generic.md
skills/seo-schema/: SKILL.md
skills/seo-sxo/: SKILL.md
skills/seo-technical/: SKILL.md
skills/seo/references/: schema-types.md
tests/: test_audit_instructions.py  test_google_report_full_audit.py  test_manifest_consistency.py  test_parasite_risk_and_extensions.py  test_url_safety.py
