[project]
name = "claude-seo"
version = "2.0.0"
description = "Comprehensive SEO analysis skill for Claude Code"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/AgriciDaniel/claude-seo"
Repository = "https://github.com/AgriciDaniel/claude-seo"

# Per-script runtime dependencies live in PEP 723 inline metadata at the top
# of each file in scripts/ — run any script with `uv run scripts/<name>.py`
# and uv resolves its deps into an isolated, cached environment. There is no
# requirements.txt; this fork is uv-only.
#
# The `dev` group below is the test/CI dependency set. It is the transitive
# third-party closure of everything tests/ imports (the scripts under test
# import url_safety -> requests, render_page -> playwright/trafilatura/htmldate,
# parse_html -> beautifulsoup4/lxml). Run the suite with:
#   uv run --group dev pytest tests/ -v
[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=6.0.2,<7.0.0",
    "requests>=2.32.4,<3.0.0",
    "urllib3>=2.6.3,<3.0.0",
    "playwright>=1.59.0,<2.0.0",
    "trafilatura>=2.0.0,<3.0.0",
    "htmldate>=1.9.0,<2.0.0",
    "courlan>=1.3.0,<2.0.0",
]

# This repo is a collection of standalone scripts + Claude Code skills, not an
# installable Python package. Mark it non-package so `uv run` provisions the
# dependency groups without trying to build/install claude-seo itself.
[tool.uv]
package = false
