[project]
name = "claude-seo"
version = "2.0.0"
description = "Comprehensive SEO analysis skill for Claude Code"
requires-python = ">=3.14"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/simplylizz/claude-seo"
Repository = "https://github.com/simplylizz/claude-seo"

# Per-script runtime dependencies live in PEP 723 inline metadata at the top
# of each file in scripts/ — run any script with `uv run scripts/<name>.py`
# and uv resolves its deps into an isolated, cached environment. There is no
# requirements.txt; this fork is uv-only.
#
# The `dev` group below is the test/CI dependency set. It is the transitive
# third-party closure of everything tests/ imports (the scripts under test
# import url_safety -> requests, render_page -> playwright/trafilatura/htmldate,
# parse_html -> beautifulsoup4/lxml). Run the suite with:
#   uv run --group dev pytest tests/ -v
[dependency-groups]
dev = [
    "pytest>=9.0,<10.0",
    "beautifulsoup4>=4.15.0,<5.0.0",
    "lxml>=6.1.1,<7.0.0",
    "requests>=2.34.2,<3.0.0",
    "urllib3>=2.7.0,<3.0.0",
    "playwright>=1.61.0,<2.0.0",
    "trafilatura>=2.1.0,<3.0.0",
    "htmldate>=1.10.0,<2.0.0",
    "courlan>=1.4.0,<2.0.0",
    # Report generator (scripts/google_report.py) deps, so its test can import
    # and run wherever weasyprint's native libs are present. Pins mirror the
    # PEP 723 inline metadata in google_report.py.
    "matplotlib>=3.11.0,<4.0.0",
    "weasyprint>=69.0,<70.0",
    # Google API client, so gsc_query's test can import it (pure Python, no
    # native libs). Mirrors the PEP 723 metadata in the gsc_* scripts.
    "google-api-python-client>=2.198.0,<3.0.0",
]

# This repo is a collection of standalone scripts + Claude Code skills, not an
# installable Python package. Mark it non-package so `uv run` provisions the
# dependency groups without trying to build/install claude-seo itself.
[tool.uv]
package = false
